--- a/.gitignore
+++ b/.gitignore
@@ -30,7 +30,6 @@ $RECYCLE.BIN/
 framework/
 assets/
 media/
-.log
 
 # Thumbnails
 ._*
@@ -45,3 +44,4 @@ media/
 Network Trash Folder
 Temporary Items
 .apdisk
+*.log
